# acdc

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
acdc/configs/depth_completion/realsense/: ACDC_R18_d435i.yaml  ACDC_R50_d435i.yaml  ucf_d435i_rgb_sem.yaml
acdc/configs/depth_completion/tartanair/: ACDC_R18_d435i.yaml  ACDC_R50_d435i.yaml  tartanair_python.yaml
acdc/engine/: evaluation.py  factory.py  inference.py
acdc/loaders/: depth_completion.py  loader.py
acdc/loaders/datasets/: __init__.py  dataset.py  realsense.py  tartanair.py
acdc/metrics/: depth_metrics.py  metric.py
acdc/networks/: network.py
acdc/networks/depth_completion/: acdc.py
acdc/scripts/: evaluate.py  inference.py
acdc/transformations/: copy_to_augment.py  crop_image.py  grayscale.py  normalize.py  pyramid.py  transformation.py
acdc/utils/: common.py  types.py
deep_learning_trainer/configs/depth_completion/realsense/: ACDC_R18_d435i.yaml  ACDC_R50_d435i.yaml
deep_learning_trainer/configs/depth_completion/tartanair/: ACDC_R18_d435i.yaml  ACDC_R50_d435i.yaml
deep_learning_trainer/engine/: evaluation.py  factory.py  inference.py
deep_learning_trainer/loaders/: depth_completion.py  loader.py
deep_learning_trainer/loaders/datasets/: dataset.py  realsense.py  tartanair.py
deep_learning_trainer/metrics/: depth_metrics.py  metric.py
deep_learning_trainer/networks/: __init__.py  network.py
deep_learning_trainer/networks/depth_completion/: acdc.py
deep_learning_trainer/scripts/: evaluate.py  inference.py
deep_learning_trainer/transformations/: copy_to_augment.py  crop_image.py  grayscale.py  normalize.py  pyramid.py  transformation.py
deep_learning_trainer/utils/: common.py  types.py
