[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true

[tool.poetry]
name = "deep_learning_trainer"
version = "0.1.0"
description = "This repository stores the scripts and helpers needed for training and evaluating different deep learning models used to enhance SLAM"
authors = ["Ujwal Bonde <ujwal@slamcore.com>", ]
license = "SLAMcore Confidential"
readme = "README.md"

homepage = "http://buildbot/docs/deep_learning_trainer"
repository = "https://bitbucket.org:slamcore/deep_learning_trainer"
classifiers = [ "Programming Language :: Python :: 3.8",
                "License :: Other/Proprietary License",
                "Operating System :: Unix",
]

include = [
    "HISTORY.md",
    "LICENSE.md",
    "docs/**/*.rst",
    "docs/**/*.py",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "*"
torch = {url="https://download.pytorch.org/whl/cu111/torch-1.9.1%2Bcu111-cp38-cp38-linux_x86_64.whl"}
torchvision = {file="deps/torchvision-0.10.1+cu111-cp38-cp38-linux_x86_64.whl"}
tqdm = "*"
pandas = "*"
dropblock = "*"
kornia = "*"
opencv-python = "4.2.0.34"

# CLI Parsing
argparse = "*"
scikit-learn = "^0.24.2"
fvcore = "^0.1.5"

[tool.poetry.dev-dependencies]
black = "20.8b1"
isort = { extras = ["pyproject"], version = ">=5.8" }
mypy = { version = "*" }

[tool.poetry.scripts]
# See https://python-poetry.org/docs/pyproject/#scripts
# Include executables under deep_learning_trainer/scripts and then add a
# new entry below
inference = "deep_learning_trainer.scripts.inference:main"
evaluate = "deep_learning_trainer.scripts.evaluate:main"

[tool.black]
line-length = 95
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
# configuration options: https://github.com/timothycrosley/isort#configuring-isort
line_length=95
profile = "black"
